# Antispambot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bad-words.txt  config.json  domain-blacklist.txt
.github/workflows/: codeql-analysis.yml
libs/DPP/: CMakeLists.txt  Doxyfile
libs/DPP/buildtools/: changelog.php
libs/DPP/cmake/: libdpp-config.cmake
libs/DPP/include/dpp/: cluster.h  win32_safe_warnings.h
libs/DPP/src/: test.h
libs/DPP/src/dpp/: utility.cpp
src/: ButtonHandler.hpp  CachedGuildMember.h  ConfigSet.cpp  ConfigSet.h  ConfirmationHandler.hpp  JsonFile.cpp  JsonFile.h  main.cpp  utils.hpp
src/classes/: ButtonHandler.hpp  CachedGuildMember.cpp  ConfigSet.cpp  ConfigSet.h
src/commands/: config.hpp  info.hpp  manage.hpp  massban.hpp  masskick.hpp  slashcommands.hpp
